# game-contracts

./: README.md  makefile  pyproject.toml
src/game_contracts/: game_logic_interface.py  game_state.py  game_ui.py  game_ui_abc.py  message.py  metadata_handler_abc.py  runner_client_abc.py  runner_server_abc.py
