[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "game-contracts"
version = "0.1.0"
description = "Game Contracts"
authors = [
  { name="Jenny Wadkins", email="threnjen@gmail.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]